--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
         body, html {
             margin: 0;
             padding: 0;
-            width: 200%;
-            height: 200%;
+            width: 100%;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: #f0f0f0; /* Optional: to give a background color */
         }
         embed {
-            width: 100%;
-            height: 100%;
+            width: 100vw;  /* Use viewport width to cover the whole screen */
+            height: 100vh; /* Use viewport height to cover the whole screen */
             border: none;
         }
     </style>
